--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "work-space-finder",
+  "homepage": "http://TommyJackson85.github.io/work-space-finder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-google-maps": "^9.4.5",
+    "react-places-autocomplete": "^7.2.0",
+    "react-scripts": "1.1.4",
+    "recompose": "^0.28.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
